# Macro-Index-Mechanism-Lab

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
backtest/: simulator.py
core/: dynamics.py
data_loader/: market_data.py
data_loader/us/: README.md  endpoints.md  fetch_us_fred.py  series_map.csv
docs/: GLOBAL_COUNTRY_TWO_LEVEL_MODEL.md  MODEL_VARIABLE_SELECTION.md  PROJECT_FRAMEWORK.md  ROADMAP.md
docs/paper/: _extracted_dho_dsge.txt
docs/us/: README.md
identification/: __init__.py  ols_identifier.py
scripts/: run_baseline.py
scripts/us/: README.md
stages/us_discount-rate vs cash-flow/docs/: DATA_DICTIONARY.md  IMPLEMENTATION_LOG_01_2026-03-15.md  IMPLEMENTATION_LOG_02_2026-03-15.md  PLAN_US_DISCOUNT_RATE_VS_CASH_FLOW.md  README.md  SD_LP_PLOT_INTERPRETATION_2026-03-15.md
stages/us_discount-rate vs cash-flow/scripts/: README.md  build_us_macro_mechanism_panel.py  plot_us_sd_lp_results.py  run_us_sd_lp.py
stages/us_vibration_equation_exploration_2026-03-15/: README.md
stages/us_vibration_equation_exploration_2026-03-15/docs/: GLOBAL_COUNTRY_TWO_LEVEL_MODEL.md  MODEL_VARIABLE_SELECTION.md
stages/us_vibration_equation_exploration_2026-03-15/docs/us/: US_EXPERIMENT_01_RIDGE_COLLINEARITY_2026-03-15.md  US_EXPERIMENT_02_ASYM_DAMPING_2026-03-15.md  US_EXPERIMENT_03_WALK_FORWARD_2026-03-15.md  US_EXPERIMENT_04_TAIL_WEIGHT_EXTREME_2026-03-15.md  US_EXPERIMENT_05_PHASE_BIAS_BASELINE_2026-03-15.md  US_EXPERIMENT_06_CAUSAL_DIFF_PHASE_2026-03-15.md  US_EXPERIMENT_LOG_2026-03-15.md  (+22 more)
tests/: test_smoke.py
(+33 files in other folders)
